debug: Add detailed logging for cgroup v2 issue investigation